--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,23 @@ h2 {
 
 p{
     font-weight: bold;
-    font-size: large;
+    font-size: 15px;
+    margin-bottom: 0;
 }
 img{
     max-width: 200px;
 }
+
+.btn-primary{
+  background-color: #F27E93;
+  border-color: #F27E93;
+}
+
+.producto {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
 * {
     padding: 0;
     margin: 0; }
@@ -28,8 +40,10 @@ img{
     background-color: #F5EFCD;
     color: #6FA687; }
     body h1 {
-      font-size: 20px; }
+      font-size: 25px; }
     body h2 {
+      font-size: 20px; }
+    body h3 {
       font-size: 15px; }
   
   .margin {
